- update how the plugin is called: $.dynamic_popup() - added possibility to pass string instead of object as argument to the main function - updated demo page

--- a/jquery-mobile-dynamicPopup/demo.html
+++ b/jquery-mobile-dynamicPopup/demo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>jQuery Mobile - Dynamic Popup Tests</title>
+    <title>jQuery Mobile $.dynamic_popup() Tests</title>
     <!--
     <link rel="stylesheet"  href="http://jquery-mobile.serbang/css/themes/default/jquery.mobile.css" />
     <link rel="stylesheet" href="http://jquery-mobile.serbang/css/structure/jquery.mobile.popup.css" />
@@ -14,156 +14,78 @@
     <script src="http://jquerymobile.com/test/js/jquery.js"></script>
     <script src="http://jquerymobile.com/test/js/jquery.mobile.js"></script>
 
-
     <script src="jquery.mobile.dynamic.popup.js"></script>
 
     <script type="text/javascript">
-        $(document).delegate( '#home', 'pageinit', function() {
+        $(document).delegate( '#demoPage', 'pageinit', function() {
 
-            $('#Register').bind('click', function(e){
+            $('#Register').on('click', function(e){
 
                 e.preventDefault();
                 e.stopImmediatePropagation();
 
-                var successText = '<p>' + $('#name').val() + ', you\'ve been successfully registered!' + '</p>';
+                // Demo #1
+                if($('#name').val()!=''){
 
-                $.fn.dynamicPopup({
-                    content: successText,
-                    popupContentCloseButtonLabel: 'Nice!',
-                    //callbacks: {
-                    //    popupContentCloseButton: function(){
-                    //      this.removeAttr('data-rel');
-                    //  }
-                    //},
-                    popupOptions: {
-                        positionTo: $('#testText')
-                    }
-                })
-                //.css({'border':'1px solid red'})
-                .bind({
-                    popupbeforeposition: function(e){
-                        //console.log('popupbeforeposition');
-                    },
-                    popupafteropen: function(e){
-                        //console.log('popupafteropen');
-                    },
-                    popupafterclose: function(e){
-                        //console.log('popupafterclose');
-                        $.mobile.changePage('#subpage');
-                    }
-                });
+                    $.dynamic_popup({
+                        content: '<p>' + $('#name').val() + ', you\'ve been successfully registered!' + '</p>',
+                        popupContentCloseButtonLabel: 'Nice!'
+                    })
+                    .bind({
+                        popupafterclose: function(e){
+                            $.mobile.changePage('#thankyouPage');
+                        }
+                    });
+
+                } else {
+
+                    $.dynamic_popup('Enter your name before submitting the form.');
+
+                }
+
+            });
+
+            $('#PressMe').on('click', function(e){
+
+                e.preventDefault();
+                e.stopImmediatePropagation();
+
+                $.dynamic_popup('This is a basic help message. Did you get it?');
 
             });
 
         });
     </script>
 
+    <style type="text/css">
+        .demoBox { margin-bottom:20px; padding-bottom:20px; border-bottom:1px dotted #cccccc; }
+        .demoBox.last { border-bottom:none; }
+    </style>
+
 </head>
 <body>
 
-<div id="home" data-role="page">
+<div id="homePage" data-role="page">
 
     <div data-role="header">
         <a href="demo.html" data-icon="home" data-iconpos="notext" data-direction="reverse" data-transition="slide">Home</a>
-        <h3>Popup</h3>
+        <h3>jQuery mobile dynamic popup()</h3>
     </div>
 
     <div data-role="content">
 
-        <h3>Description</h3>
+        <h3>Plugin description</h3>
 
-        <p> This is a <b>jQuery Mobile plugin</b> based on the <code>popup()</code> function available since <a href="http://jquerymobile.com/demos/1.2.0-alpha.1/docs/pages/popup/index.html">1.2 alpha</a>.
-            It enables you to create a dynamic popup without needing to define a specific div with content.</p>
-        <p>
-            <span id="testText" style="color:#ee82ee;">This case</span> is extremely useful when you are submitting a form,
-        and via AJAX you receive an error or a success response. Depending on that you can show a generic popup which can do basic things
-        or something that you define via the <code>callbacks</code> param.</p>
-
-
-        <p>Random usage example, the popup should be positioned near the purple text and should contain some static text passed through <code>content</code> param.</code> </p>
-        <pre style="border:1px solid #cccccc;">
-            $.fn.dynamicPopup({
-                content: 'This is the dynamic content of the popup!',
-                callbacks: {
-                  popupContent: function(){
-                      this.append('&lt;p&gt;Content from callback&lt;/p&gt;');
-                  }
-                },
-                popupOptions: {
-                    positionTo: $('#testText')
-                }
-            })
-            .css({'border':'1px solid red'})
-            .bind({
-                popupbeforeposition: function(e){
-                    console.log('popupbeforeposition');
-                },
-                popupafteropen: function(e){
-                    console.log('popupafteropen');
-                },
-                popupafterclose: function(e){
-                    console.log('popupafterclose');
-                }
-            });
-        </pre>
-
-        <hr>
-
-        <h3>Demo</h3>
-
-        <p>Fill the <code>name</code> field and press the <code>Register</code> button:</p>
-
-        <form>
-
-            <div data-role="fieldcontain">
-                <label for="name">Name:</label>
-                <input type="text" name="name" id="name" value="" placeholder="Your name" autocapitalize="on" pattern="[a-zA-Z\- ]+" />
-            </div>
-
-            <div data-role="fieldcontain">
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" value="" placeholder="your@email.com" />
-            </div>
-
-            <button data-role="button" id="Register" data-inline="true" data-icon="arrow-r" data-iconpos="right">Register</button>
-
-        </form>
+        <p><code>$.dynamic_popup()</code> is a light-weight <b>jQuery Mobile plugin</b> based on the <code>popup()</code> function
+            available since <a href="http://jquerymobile.com/demos/1.2.0-alpha.1/docs/pages/popup/index.html" data-ajax="false">1.2 alpha</a>.
+            It enables you to create a dynamic popup without stressing you with details where to put the actual HTML code.
+            This is extremely useful if you have many dynamic pages in your jQuery Mobile web application.</p>
+        <p>Read my original <a href="http://ghita.org/jquery/dynamic-mobile-popup" data-ajax="false">blog post</a> about the plugin and also the GitHub feature "<a href="https://github.com/jquery/jquery-mobile/issues/4888" data-ajax="false">Add ability to make popups common to multiple pages</a>".</p>
 
 
-        <hr>
 
-        <h3>Calling the plugin</h3>
+        <a href="#demoPage" data-icon="arrow-r" data-iconpos="right" data-inline="true" data-role="button" data-theme="b">Demos</a> <a href="https://github.com/serbanghita/jquery-plugins/tree/master/jquery-mobile-dynamicPopup" data-inline="true" data-ajax="false" data-icon="gear" data-iconpos="right" data-role="button" data-theme="e">Download</a>
 
-        <p>Look at the source code of this page.</p>
-        <p>This is how the plugin can be called:</p>
-
-        <pre>
-  $.dynamicPopup({
-      content: 'This is the dynamic content of the popup.',
-      popupId: '',
-      popupClass: '',
-      popupContentClass: '',
-      popupCloseButtonClass: '',
-      popupContentCloseButtonClass: '',
-      popupContentCloseButtonLabel: '',
-      callbacks: {
-           popup: function(){ },
-           popupContent: function(){ },
-           popupCloseButton: function(){ },
-           popupContentCloseButton: function(){ }
-      },
-      popupOptions: { // http://jquerymobile.com/demos/1.2.0-alpha.1/docs/pages/popup/options.html
-           corners: bool,
-           initSelector: '',
-           overlayTheme: '',
-           positionTo: '',
-           shadow: bool,
-           theme: '',
-           tolerance: '',
-           transition: ''
-      }
-  });
-        </pre>
 
     </div>
 
@@ -173,22 +95,82 @@
 
 </div>
 
-<div id="subpage" data-role="page">
+<div id="demoPage" data-role="page">
+
+    <div data-role="header">
+        <a href="demo.html" data-icon="home" data-iconpos="notext" data-direction="reverse" data-transition="slide">Home</a>
+        <h3>jQuery mobile dynamic popup()</h3>
+    </div>
+
+    <div data-role="content">
+
+
+        <div class="demoBox">
+            <h3>Demo #1</h3>
+
+            <p>Programatically called simple popup alert (like alert()). Press 'Help me'.</p>
+
+            <a href="#" id="PressMe">Help me</a>
+        </div>
+
+
+        <div class="demoBox">
+            <h3>Demo #2</h3>
+
+            <p>Fill the <code>name</code> field and press the <code>Register</code> button.</p>
+
+            <form>
+
+                <div data-role="fieldcontain">
+                    <label for="name">Name:</label>
+                    <input type="text" name="name" id="name" value="" placeholder="Your name" autocapitalize="on" pattern="[a-zA-Z\- ]+" />
+                </div>
+
+                <div data-role="fieldcontain">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" value="" placeholder="your@email.com" />
+                </div>
+
+                <button data-role="button" id="Register" data-inline="true" data-icon="arrow-r" data-iconpos="right" data-theme="b">Register</button>
+
+            </form>
+        </div>
+
+        <div class="demoBox last">
+            <h3>Demo #3</h3>
+
+            <p>Custom content inside the popup.</p>
+
+            <p>...</p>
+        </div>
+
+    </div>
+
+    <div data-role="footer">
+
+        <p>Serban Ghita @ 2012</p>
+
+    </div>
+
+</div>
+
+<div id="thankyouPage" data-role="page">
 
     <div data-role="header">
 
         <a href="demo.html" data-icon="home" data-iconpos="notext" data-direction="reverse" data-transition="slide" data-rel="back">Home</a>
-        <h3>Popup</h3>
+        <h3>jQuery Mobile dynamic popup()</h3>
 
     </div>
+
     <div data-role="content">
 
         <h1>Thank you message</h1>
 
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque non tortor et neque aliquet vestibulum eu non eros.
-            Quisque non risus eu justo hendrerit sagittis.</p>
+        <p>This is the thank you message.</p>
 
     </div>
+
     <div data-role="footer">
 
         <p>Serban Ghita @ 2012</p>
